# core

./: .env.example  .gitguardian.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BUILD.yaml  DOCKER.md  Dockerfile  README.md  ROADMAP.md  devenv.nix  docker-compose.yml  grog.ci.toml  grog.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml
configs/cluster/: e2b.yaml  local.yaml
configs/database/: island_large.yaml  island_medium.yaml  island_small.yaml
configs/evolution/: anthropic_only.yaml  large_budget.yaml  medium_budget.yaml  multi_model_chaos.yaml  small_budget.yaml
configs/saga/: objective_evolution_example.yaml
configs/task/: agent_design.yaml  circle_packing.yaml  mask_to_seg.yaml  mask_to_seg_rust.yaml  novelty_generator.yaml  squeeze_hnsw.yaml  squeeze_rust.yaml  squeeze_tsne.yaml  static_detection.yaml
configs/variant/: circle_packing_anthropic.yaml  circle_packing_e2b.yaml  mask_to_seg_example.yaml  mask_to_seg_rust_example.yaml  squeeze_hnsw_e2b.yaml  (+2 more)
docs/: available_llms.md  clickhouse.md  clickhouse_schema_reference.md  configuration.md  creating_tasks.md  developer_guide.md  devenv.md  dspy_integration.md  e2b_integration.md  evolutionary_approach.md  getting_started.md  index.md  logging.md  mcp_integration.md  modular_architecture.md  openr_integration.md  papers.md  roadmap.md  saga_integration.md  schedule-plan.md  webui.md
genesis/: cli.py  eval_hydra.py  genesis_mcp  launch_hydra.py  logo.py  mcp_server.py
genesis_rust_backend/: Dockerfile
lib/rust/: BUILD.yaml  Cargo.toml
lib/rust/genesis_rust_backend/: Dockerfile  README.md
lib/rust/genesis_rust_backend/src/: config.rs  main.rs
lib/rust/genesis_rust_backend/src/core/: runner.rs  sampler.rs
lib/rust/genesis_rust_backend/src/database/: mod.rs
lib/rust/genesis_rust_backend/tests/: db_integration.rs  memory_tests.rs
lib/rust/genesis_rust_backend/tests/common/: mod.rs
lib/rust/squeeze/: pyproject.toml
lib/rust/squeeze/benches/: hnsw_benchmarks.rs
lib/rust/squeeze/src/: barnes_hut.rs  cache_aligned.rs  hnsw_algo.rs  hnsw_index.rs  isomap.rs  lib.rs  lle.rs  mds.rs  metrics.rs  metrics_simd.rs  mixed_precision.rs  numerical.rs  pacmap.rs  pca.rs  phate.rs  sparse_hnsw_index.rs  sparse_metrics.rs  trimap.rs  tsne.rs
lib/rust/src/: config.rs
lib/rust/src/core/: alma_memory.rs  runner.rs
lib/rust/src/launch/: mod.rs
lib/rust/tests/common/: mod.rs
migrations/: BUILD.yaml  full_ddl.sql  liquibase.properties
scripts/: README.md  bootstrap-gcp.sh  check_empty_code.py  check_evolution_runs.py  check_metadata.py  check_missing_embeddings.py  compute_clusters.py  export_ddl.sh  generate_missing_embeddings.py  migrate_sqlite_to_clickhouse.py  test_clickhouse.py
terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  cloud_run_frontend.tf  cloud_sql.tf  main.tf  networking.tf  outputs.tf  secrets.tf
tests/: test_alma_memory.py  test_edit_base.py  test_edit_circle.py  test_gepa_optimizer.py  test_meta_summarizer.py  test_ui_embeddings.py
(+185 files in other folders)
